--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ textarea{
 .contact-item{
     display: flex;
     align-items: center;
-    grid-area: .5em;
+    gap: 1em;
     padding: 1em;
     border-bottom: 1px solid var(--color-border);
 }
